// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DisplayNoneTest DisplayNoneDisabledTest 1`] = `
Object {
  "AutomationId": "view-component-switch-view",
  "Background": null,
  "BorderBrush": "#00000000",
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Height": 180,
  "HorizontalAlignment": "Stretch",
  "Left": 10,
  "Margin": "0,0,0,0",
  "Top": 10,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 718,
  "XamlType": "Microsoft.ReactNative.ViewPanel",
  "children": Array [
    Object {
      "Background": null,
      "BorderBrush": "#00000000",
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Height": 100,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Microsoft.ReactNative.ViewPanel",
      "children": Array [
        Object {
          "Clip": null,
          "FlowDirection": "LeftToRight",
          "Foreground": "#FF000000",
          "Height": 19,
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Text": "toggle display:none TextInput1",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 718,
          "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
        },
        Object {
          "Background": null,
          "BorderBrush": null,
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "Foreground": "#FF000000",
          "Height": 31,
          "HorizontalAlignment": "Left",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Top": 19,
          "VerticalAlignment": "Center",
          "Visibility": "Visible",
          "Width": 51,
          "XamlType": "Windows.UI.Xaml.Controls.ToggleSwitch",
          "children": Array [
            Object {
              "Background": null,
              "BorderBrush": null,
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.Grid",
              "children": Array [
                Object {
                  "Background": null,
                  "BorderBrush": null,
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "HorizontalAlignment": "Left",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Top": 0,
                  "VerticalAlignment": "Top",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.Grid",
                  "children": Array [
                    Object {
                      "Background": "#00FFFFFF",
                      "BorderBrush": null,
                      "BorderThickness": "0,0,0,0",
                      "Clip": null,
                      "CornerRadius": "0,0,0,0",
                      "FlowDirection": "LeftToRight",
                      "HorizontalAlignment": "Stretch",
                      "Left": 0,
                      "Margin": "0,5,0,5",
                      "Name": "SwitchAreaGrid",
                      "Padding": "0,0,0,0",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "XamlType": "Windows.UI.Xaml.Controls.Grid",
                    },
                    Object {
                      "Background": null,
                      "BorderBrush": null,
                      "BorderThickness": "0,0,0,0",
                      "Clip": null,
                      "CornerRadius": "0,0,0,0",
                      "FlowDirection": "LeftToRight",
                      "Foreground": "#FF000000",
                      "HorizontalAlignment": "Left",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Name": "OffContentPresenter",
                      "Padding": "0,0,0,0",
                      "Top": 0,
                      "VerticalAlignment": "Center",
                      "Visibility": "Visible",
                      "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
                    },
                    Object {
                      "Background": null,
                      "BorderBrush": null,
                      "BorderThickness": "0,0,0,0",
                      "Clip": null,
                      "CornerRadius": "0,0,0,0",
                      "FlowDirection": "LeftToRight",
                      "Foreground": "#FF000000",
                      "HorizontalAlignment": "Left",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Name": "OnContentPresenter",
                      "Padding": "0,0,0,0",
                      "Top": 0,
                      "VerticalAlignment": "Center",
                      "Visibility": "Visible",
                      "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
                    },
                    Object {
                      "Clip": null,
                      "FlowDirection": "LeftToRight",
                      "Height": 20,
                      "HorizontalAlignment": "Stretch",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Name": "OuterBorder",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 40,
                      "XamlType": "Windows.UI.Xaml.Shapes.Rectangle",
                    },
                    Object {
                      "Clip": null,
                      "FlowDirection": "LeftToRight",
                      "Height": 20,
                      "HorizontalAlignment": "Stretch",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Name": "SwitchKnobBounds",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 40,
                      "XamlType": "Windows.UI.Xaml.Shapes.Rectangle",
                    },
                    Object {
                      "Background": null,
                      "BorderBrush": null,
                      "BorderThickness": "0,0,0,0",
                      "Clip": null,
                      "CornerRadius": "0,0,0,0",
                      "FlowDirection": "LeftToRight",
                      "Height": 20,
                      "HorizontalAlignment": "Left",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Name": "SwitchKnob",
                      "Padding": "0,0,0,0",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 20,
                      "XamlType": "Windows.UI.Xaml.Controls.Grid",
                      "children": Array [
                        Object {
                          "Clip": null,
                          "FlowDirection": "LeftToRight",
                          "Height": 10,
                          "HorizontalAlignment": "Stretch",
                          "Left": 0,
                          "Margin": "0,0,0,0",
                          "Name": "SwitchKnobOn",
                          "Top": 0,
                          "VerticalAlignment": "Stretch",
                          "Visibility": "Visible",
                          "Width": 10,
                          "XamlType": "Windows.UI.Xaml.Shapes.Ellipse",
                        },
                        Object {
                          "Clip": null,
                          "FlowDirection": "LeftToRight",
                          "Height": 10,
                          "HorizontalAlignment": "Stretch",
                          "Left": 0,
                          "Margin": "0,0,0,0",
                          "Name": "SwitchKnobOff",
                          "Top": 0,
                          "VerticalAlignment": "Stretch",
                          "Visibility": "Visible",
                          "Width": 10,
                          "XamlType": "Windows.UI.Xaml.Shapes.Ellipse",
                        },
                      ],
                    },
                    Object {
                      "Background": "#33000000",
                      "BorderBrush": "#00FFFFFF",
                      "BorderThickness": "1,1,1,1",
                      "Clip": null,
                      "CornerRadius": "0,0,0,0",
                      "FlowDirection": "LeftToRight",
                      "Foreground": "#FF000000",
                      "HorizontalAlignment": "Stretch",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Name": "SwitchThumb",
                      "Padding": "0,0,0,0",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "XamlType": "Windows.UI.Xaml.Controls.Primitives.Thumb",
                      "children": Array [
                        Object {
                          "Clip": null,
                          "FlowDirection": "LeftToRight",
                          "HorizontalAlignment": "Stretch",
                          "Left": 0,
                          "Margin": "0,0,0,0",
                          "Top": 0,
                          "VerticalAlignment": "Stretch",
                          "Visibility": "Visible",
                          "XamlType": "Windows.UI.Xaml.Shapes.Rectangle",
                        },
                      ],
                    },
                  ],
                },
              ],
            },
          ],
        },
        Object {
          "Clip": null,
          "FlowDirection": "LeftToRight",
          "Foreground": "#FF000000",
          "Height": 19,
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Text": "toggle display:none TextInput2",
          "Top": 50,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 718,
          "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
        },
        Object {
          "AutomationId": "toggle-display:none",
          "Background": null,
          "BorderBrush": null,
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "Foreground": "#FF000000",
          "Height": 31,
          "HorizontalAlignment": "Left",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Top": 69,
          "VerticalAlignment": "Center",
          "Visibility": "Visible",
          "Width": 51,
          "XamlType": "Windows.UI.Xaml.Controls.ToggleSwitch",
          "children": Array [
            Object {
              "Background": null,
              "BorderBrush": null,
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.Grid",
              "children": Array [
                Object {
                  "Background": null,
                  "BorderBrush": null,
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "HorizontalAlignment": "Left",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Top": 0,
                  "VerticalAlignment": "Top",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.Grid",
                  "children": Array [
                    Object {
                      "Background": "#00FFFFFF",
                      "BorderBrush": null,
                      "BorderThickness": "0,0,0,0",
                      "Clip": null,
                      "CornerRadius": "0,0,0,0",
                      "FlowDirection": "LeftToRight",
                      "HorizontalAlignment": "Stretch",
                      "Left": 0,
                      "Margin": "0,5,0,5",
                      "Name": "SwitchAreaGrid",
                      "Padding": "0,0,0,0",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "XamlType": "Windows.UI.Xaml.Controls.Grid",
                    },
                    Object {
                      "Background": null,
                      "BorderBrush": null,
                      "BorderThickness": "0,0,0,0",
                      "Clip": null,
                      "CornerRadius": "0,0,0,0",
                      "FlowDirection": "LeftToRight",
                      "Foreground": "#FF000000",
                      "HorizontalAlignment": "Left",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Name": "OffContentPresenter",
                      "Padding": "0,0,0,0",
                      "Top": 0,
                      "VerticalAlignment": "Center",
                      "Visibility": "Visible",
                      "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
                    },
                    Object {
                      "Background": null,
                      "BorderBrush": null,
                      "BorderThickness": "0,0,0,0",
                      "Clip": null,
                      "CornerRadius": "0,0,0,0",
                      "FlowDirection": "LeftToRight",
                      "Foreground": "#FF000000",
                      "HorizontalAlignment": "Left",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Name": "OnContentPresenter",
                      "Padding": "0,0,0,0",
                      "Top": 0,
                      "VerticalAlignment": "Center",
                      "Visibility": "Visible",
                      "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
                    },
                    Object {
                      "Clip": null,
                      "FlowDirection": "LeftToRight",
                      "Height": 20,
                      "HorizontalAlignment": "Stretch",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Name": "OuterBorder",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 40,
                      "XamlType": "Windows.UI.Xaml.Shapes.Rectangle",
                    },
                    Object {
                      "Clip": null,
                      "FlowDirection": "LeftToRight",
                      "Height": 20,
                      "HorizontalAlignment": "Stretch",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Name": "SwitchKnobBounds",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 40,
                      "XamlType": "Windows.UI.Xaml.Shapes.Rectangle",
                    },
                    Object {
                      "Background": null,
                      "BorderBrush": null,
                      "BorderThickness": "0,0,0,0",
                      "Clip": null,
                      "CornerRadius": "0,0,0,0",
                      "FlowDirection": "LeftToRight",
                      "Height": 20,
                      "HorizontalAlignment": "Left",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Name": "SwitchKnob",
                      "Padding": "0,0,0,0",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 20,
                      "XamlType": "Windows.UI.Xaml.Controls.Grid",
                      "children": Array [
                        Object {
                          "Clip": null,
                          "FlowDirection": "LeftToRight",
                          "Height": 10,
                          "HorizontalAlignment": "Stretch",
                          "Left": 0,
                          "Margin": "0,0,0,0",
                          "Name": "SwitchKnobOn",
                          "Top": 0,
                          "VerticalAlignment": "Stretch",
                          "Visibility": "Visible",
                          "Width": 10,
                          "XamlType": "Windows.UI.Xaml.Shapes.Ellipse",
                        },
                        Object {
                          "Clip": null,
                          "FlowDirection": "LeftToRight",
                          "Height": 10,
                          "HorizontalAlignment": "Stretch",
                          "Left": 0,
                          "Margin": "0,0,0,0",
                          "Name": "SwitchKnobOff",
                          "Top": 0,
                          "VerticalAlignment": "Stretch",
                          "Visibility": "Visible",
                          "Width": 10,
                          "XamlType": "Windows.UI.Xaml.Shapes.Ellipse",
                        },
                      ],
                    },
                    Object {
                      "Background": "#33000000",
                      "BorderBrush": "#00FFFFFF",
                      "BorderThickness": "1,1,1,1",
                      "Clip": null,
                      "CornerRadius": "0,0,0,0",
                      "FlowDirection": "LeftToRight",
                      "Foreground": "#FF000000",
                      "HorizontalAlignment": "Stretch",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Name": "SwitchThumb",
                      "Padding": "0,0,0,0",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "XamlType": "Windows.UI.Xaml.Controls.Primitives.Thumb",
                      "children": Array [
                        Object {
                          "Clip": null,
                          "FlowDirection": "LeftToRight",
                          "HorizontalAlignment": "Stretch",
                          "Left": 0,
                          "Margin": "0,0,0,0",
                          "Top": 0,
                          "VerticalAlignment": "Stretch",
                          "Visibility": "Visible",
                          "XamlType": "Windows.UI.Xaml.Shapes.Rectangle",
                        },
                      ],
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "Background": null,
      "BorderBrush": "#00000000",
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Height": 40,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Top": 100,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Microsoft.ReactNative.ViewPanel",
      "children": Array [
        Object {
          "Background": "#66FFFFFF",
          "BorderBrush": "#FF808080",
          "BorderThickness": "1,1,1,1",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "Foreground": "#FF000000",
          "Height": 40,
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "10,6,6,5",
          "Text": "TextInput1...",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 718,
          "XamlType": "Windows.UI.Xaml.Controls.TextBox",
          "children": Array [
            Object {
              "Background": null,
              "BorderBrush": null,
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.Grid",
              "children": Array [
                Object {
                  "Background": "#66FFFFFF",
                  "BorderBrush": "#FF808080",
                  "BorderThickness": "1,1,1,1",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "HorizontalAlignment": "Stretch",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Name": "BorderElement",
                  "Padding": "0,0,0,0",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.Border",
                },
                Object {
                  "Background": "#00FFFFFF",
                  "BorderBrush": "#00FFFFFF",
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#FF000000",
                  "HorizontalAlignment": "Stretch",
                  "Left": 0,
                  "Margin": "1,1,1,1",
                  "Name": "ContentElement",
                  "Padding": "10,6,6,5",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.ScrollViewer",
                  "children": Array [
                    Object {
                      "Background": null,
                      "BorderBrush": "#00FFFFFF",
                      "BorderThickness": "0,0,0,0",
                      "Clip": null,
                      "CornerRadius": "0,0,0,0",
                      "FlowDirection": "LeftToRight",
                      "HorizontalAlignment": "Stretch",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Name": "Root",
                      "Padding": "0,0,0,0",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "XamlType": "Windows.UI.Xaml.Controls.Border",
                      "children": Array [
                        Object {
                          "Background": "#00FFFFFF",
                          "BorderBrush": null,
                          "BorderThickness": "0,0,0,0",
                          "Clip": null,
                          "CornerRadius": "0,0,0,0",
                          "FlowDirection": "LeftToRight",
                          "HorizontalAlignment": "Stretch",
                          "Left": 0,
                          "Margin": "0,0,0,0",
                          "Padding": "0,0,0,0",
                          "Top": 0,
                          "VerticalAlignment": "Stretch",
                          "Visibility": "Visible",
                          "XamlType": "Windows.UI.Xaml.Controls.Grid",
                          "children": Array [
                            Object {
                              "Background": null,
                              "BorderBrush": null,
                              "BorderThickness": "0,0,0,0",
                              "Clip": "Windows.UI.Xaml.Media.RectangleGeometry",
                              "CornerRadius": "0,0,0,0",
                              "FlowDirection": "LeftToRight",
                              "Foreground": "#FF000000",
                              "HorizontalAlignment": "Stretch",
                              "Left": 0,
                              "Margin": "10,6,6,5",
                              "Name": "ScrollContentPresenter",
                              "Padding": "0,0,0,0",
                              "Top": 0,
                              "VerticalAlignment": "Stretch",
                              "Visibility": "Visible",
                              "XamlType": "Windows.UI.Xaml.Controls.ScrollContentPresenter",
                              "children": Array [
                                Object {
                                  "Clip": null,
                                  "FlowDirection": "LeftToRight",
                                  "HorizontalAlignment": "Stretch",
                                  "Left": 0,
                                  "Margin": "0,0,0,0",
                                  "Top": 0,
                                  "VerticalAlignment": "Stretch",
                                  "Visibility": "Visible",
                                  "XamlType": "Windows.UI.Xaml.FrameworkElement",
                                },
                              ],
                            },
                            Object {
                              "Background": null,
                              "BorderBrush": null,
                              "BorderThickness": "0,0,0,0",
                              "Clip": null,
                              "CornerRadius": "0,0,0,0",
                              "FlowDirection": "LeftToRight",
                              "HorizontalAlignment": "Stretch",
                              "Left": 0,
                              "Margin": "0,0,0,0",
                              "Padding": "0,0,0,0",
                              "Top": 0,
                              "VerticalAlignment": "Stretch",
                              "Visibility": "Visible",
                              "XamlType": "Windows.UI.Xaml.Controls.Grid",
                            },
                          ],
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Background": null,
                  "BorderBrush": null,
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#99000000",
                  "HorizontalAlignment": "Stretch",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Name": "DescriptionPresenter",
                  "Padding": "0,0,0,0",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "Background": null,
      "BorderBrush": "#00000000",
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Height": 40,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Top": 140,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Microsoft.ReactNative.ViewPanel",
      "children": Array [
        Object {
          "Background": "#66FFFFFF",
          "BorderBrush": "#FF808080",
          "BorderThickness": "1,1,1,1",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "Foreground": "#FF000000",
          "Height": 40,
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "10,6,6,5",
          "Text": "TextInput2...",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 718,
          "XamlType": "Windows.UI.Xaml.Controls.TextBox",
          "children": Array [
            Object {
              "Background": null,
              "BorderBrush": null,
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.Grid",
              "children": Array [
                Object {
                  "Background": "#66FFFFFF",
                  "BorderBrush": "#FF808080",
                  "BorderThickness": "1,1,1,1",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "HorizontalAlignment": "Stretch",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Name": "BorderElement",
                  "Padding": "0,0,0,0",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.Border",
                },
                Object {
                  "Background": "#00FFFFFF",
                  "BorderBrush": "#00FFFFFF",
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#FF000000",
                  "HorizontalAlignment": "Stretch",
                  "Left": 0,
                  "Margin": "1,1,1,1",
                  "Name": "ContentElement",
                  "Padding": "10,6,6,5",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.ScrollViewer",
                  "children": Array [
                    Object {
                      "Background": null,
                      "BorderBrush": "#00FFFFFF",
                      "BorderThickness": "0,0,0,0",
                      "Clip": null,
                      "CornerRadius": "0,0,0,0",
                      "FlowDirection": "LeftToRight",
                      "HorizontalAlignment": "Stretch",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Name": "Root",
                      "Padding": "0,0,0,0",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "XamlType": "Windows.UI.Xaml.Controls.Border",
                      "children": Array [
                        Object {
                          "Background": "#00FFFFFF",
                          "BorderBrush": null,
                          "BorderThickness": "0,0,0,0",
                          "Clip": null,
                          "CornerRadius": "0,0,0,0",
                          "FlowDirection": "LeftToRight",
                          "HorizontalAlignment": "Stretch",
                          "Left": 0,
                          "Margin": "0,0,0,0",
                          "Padding": "0,0,0,0",
                          "Top": 0,
                          "VerticalAlignment": "Stretch",
                          "Visibility": "Visible",
                          "XamlType": "Windows.UI.Xaml.Controls.Grid",
                          "children": Array [
                            Object {
                              "Background": null,
                              "BorderBrush": null,
                              "BorderThickness": "0,0,0,0",
                              "Clip": "Windows.UI.Xaml.Media.RectangleGeometry",
                              "CornerRadius": "0,0,0,0",
                              "FlowDirection": "LeftToRight",
                              "Foreground": "#FF000000",
                              "HorizontalAlignment": "Stretch",
                              "Left": 0,
                              "Margin": "10,6,6,5",
                              "Name": "ScrollContentPresenter",
                              "Padding": "0,0,0,0",
                              "Top": 0,
                              "VerticalAlignment": "Stretch",
                              "Visibility": "Visible",
                              "XamlType": "Windows.UI.Xaml.Controls.ScrollContentPresenter",
                              "children": Array [
                                Object {
                                  "Clip": null,
                                  "FlowDirection": "LeftToRight",
                                  "HorizontalAlignment": "Stretch",
                                  "Left": 0,
                                  "Margin": "0,0,0,0",
                                  "Top": 0,
                                  "VerticalAlignment": "Stretch",
                                  "Visibility": "Visible",
                                  "XamlType": "Windows.UI.Xaml.FrameworkElement",
                                },
                              ],
                            },
                            Object {
                              "Background": null,
                              "BorderBrush": null,
                              "BorderThickness": "0,0,0,0",
                              "Clip": null,
                              "CornerRadius": "0,0,0,0",
                              "FlowDirection": "LeftToRight",
                              "HorizontalAlignment": "Stretch",
                              "Left": 0,
                              "Margin": "0,0,0,0",
                              "Padding": "0,0,0,0",
                              "Top": 0,
                              "VerticalAlignment": "Stretch",
                              "Visibility": "Visible",
                              "XamlType": "Windows.UI.Xaml.Controls.Grid",
                            },
                          ],
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Background": null,
                  "BorderBrush": null,
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#99000000",
                  "HorizontalAlignment": "Stretch",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Name": "DescriptionPresenter",
                  "Padding": "0,0,0,0",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`DisplayNoneTest DisplayNoneEnabledTest 1`] = `
Object {
  "AutomationId": "view-component-switch-view",
  "Background": null,
  "BorderBrush": "#00000000",
  "BorderThickness": "0,0,0,0",
  "Clip": null,
  "CornerRadius": "0,0,0,0",
  "FlowDirection": "LeftToRight",
  "Height": 140,
  "HorizontalAlignment": "Stretch",
  "Left": 10,
  "Margin": "0,0,0,0",
  "Top": 10,
  "VerticalAlignment": "Stretch",
  "Visibility": "Visible",
  "Width": 718,
  "XamlType": "Microsoft.ReactNative.ViewPanel",
  "children": Array [
    Object {
      "Background": null,
      "BorderBrush": "#00000000",
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Height": 100,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Top": 0,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Microsoft.ReactNative.ViewPanel",
      "children": Array [
        Object {
          "Clip": null,
          "FlowDirection": "LeftToRight",
          "Foreground": "#FF000000",
          "Height": 19,
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Text": "toggle display:none TextInput1",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 718,
          "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
        },
        Object {
          "Background": null,
          "BorderBrush": null,
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "Foreground": "#FF000000",
          "Height": 31,
          "HorizontalAlignment": "Left",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Top": 19,
          "VerticalAlignment": "Center",
          "Visibility": "Visible",
          "Width": 51,
          "XamlType": "Windows.UI.Xaml.Controls.ToggleSwitch",
          "children": Array [
            Object {
              "Background": null,
              "BorderBrush": null,
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.Grid",
              "children": Array [
                Object {
                  "Background": null,
                  "BorderBrush": null,
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "HorizontalAlignment": "Left",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Top": 0,
                  "VerticalAlignment": "Top",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.Grid",
                  "children": Array [
                    Object {
                      "Background": "#00FFFFFF",
                      "BorderBrush": null,
                      "BorderThickness": "0,0,0,0",
                      "Clip": null,
                      "CornerRadius": "0,0,0,0",
                      "FlowDirection": "LeftToRight",
                      "HorizontalAlignment": "Stretch",
                      "Left": 0,
                      "Margin": "0,5,0,5",
                      "Name": "SwitchAreaGrid",
                      "Padding": "0,0,0,0",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "XamlType": "Windows.UI.Xaml.Controls.Grid",
                    },
                    Object {
                      "Background": null,
                      "BorderBrush": null,
                      "BorderThickness": "0,0,0,0",
                      "Clip": null,
                      "CornerRadius": "0,0,0,0",
                      "FlowDirection": "LeftToRight",
                      "Foreground": "#FF000000",
                      "HorizontalAlignment": "Left",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Name": "OffContentPresenter",
                      "Padding": "0,0,0,0",
                      "Top": 0,
                      "VerticalAlignment": "Center",
                      "Visibility": "Visible",
                      "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
                    },
                    Object {
                      "Background": null,
                      "BorderBrush": null,
                      "BorderThickness": "0,0,0,0",
                      "Clip": null,
                      "CornerRadius": "0,0,0,0",
                      "FlowDirection": "LeftToRight",
                      "Foreground": "#FF000000",
                      "HorizontalAlignment": "Left",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Name": "OnContentPresenter",
                      "Padding": "0,0,0,0",
                      "Top": 0,
                      "VerticalAlignment": "Center",
                      "Visibility": "Visible",
                      "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
                    },
                    Object {
                      "Clip": null,
                      "FlowDirection": "LeftToRight",
                      "Height": 20,
                      "HorizontalAlignment": "Stretch",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Name": "OuterBorder",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 40,
                      "XamlType": "Windows.UI.Xaml.Shapes.Rectangle",
                    },
                    Object {
                      "Clip": null,
                      "FlowDirection": "LeftToRight",
                      "Height": 20,
                      "HorizontalAlignment": "Stretch",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Name": "SwitchKnobBounds",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 40,
                      "XamlType": "Windows.UI.Xaml.Shapes.Rectangle",
                    },
                    Object {
                      "Background": null,
                      "BorderBrush": null,
                      "BorderThickness": "0,0,0,0",
                      "Clip": null,
                      "CornerRadius": "0,0,0,0",
                      "FlowDirection": "LeftToRight",
                      "Height": 20,
                      "HorizontalAlignment": "Left",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Name": "SwitchKnob",
                      "Padding": "0,0,0,0",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 20,
                      "XamlType": "Windows.UI.Xaml.Controls.Grid",
                      "children": Array [
                        Object {
                          "Clip": null,
                          "FlowDirection": "LeftToRight",
                          "Height": 10,
                          "HorizontalAlignment": "Stretch",
                          "Left": 0,
                          "Margin": "0,0,0,0",
                          "Name": "SwitchKnobOn",
                          "Top": 0,
                          "VerticalAlignment": "Stretch",
                          "Visibility": "Visible",
                          "Width": 10,
                          "XamlType": "Windows.UI.Xaml.Shapes.Ellipse",
                        },
                        Object {
                          "Clip": null,
                          "FlowDirection": "LeftToRight",
                          "Height": 10,
                          "HorizontalAlignment": "Stretch",
                          "Left": 0,
                          "Margin": "0,0,0,0",
                          "Name": "SwitchKnobOff",
                          "Top": 0,
                          "VerticalAlignment": "Stretch",
                          "Visibility": "Visible",
                          "Width": 10,
                          "XamlType": "Windows.UI.Xaml.Shapes.Ellipse",
                        },
                      ],
                    },
                    Object {
                      "Background": "#33000000",
                      "BorderBrush": "#00FFFFFF",
                      "BorderThickness": "1,1,1,1",
                      "Clip": null,
                      "CornerRadius": "0,0,0,0",
                      "FlowDirection": "LeftToRight",
                      "Foreground": "#FF000000",
                      "HorizontalAlignment": "Stretch",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Name": "SwitchThumb",
                      "Padding": "0,0,0,0",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "XamlType": "Windows.UI.Xaml.Controls.Primitives.Thumb",
                      "children": Array [
                        Object {
                          "Clip": null,
                          "FlowDirection": "LeftToRight",
                          "HorizontalAlignment": "Stretch",
                          "Left": 0,
                          "Margin": "0,0,0,0",
                          "Top": 0,
                          "VerticalAlignment": "Stretch",
                          "Visibility": "Visible",
                          "XamlType": "Windows.UI.Xaml.Shapes.Rectangle",
                        },
                      ],
                    },
                  ],
                },
              ],
            },
          ],
        },
        Object {
          "Clip": null,
          "FlowDirection": "LeftToRight",
          "Foreground": "#FF000000",
          "Height": 19,
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Text": "toggle display:none TextInput2",
          "Top": 50,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 718,
          "XamlType": "Windows.UI.Xaml.Controls.TextBlock",
        },
        Object {
          "AutomationId": "toggle-display:none",
          "Background": null,
          "BorderBrush": null,
          "BorderThickness": "0,0,0,0",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "Foreground": "#FF000000",
          "Height": 31,
          "HorizontalAlignment": "Left",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "0,0,0,0",
          "Top": 69,
          "VerticalAlignment": "Center",
          "Visibility": "Visible",
          "Width": 51,
          "XamlType": "Windows.UI.Xaml.Controls.ToggleSwitch",
          "children": Array [
            Object {
              "Background": null,
              "BorderBrush": null,
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.Grid",
              "children": Array [
                Object {
                  "Background": null,
                  "BorderBrush": null,
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "HorizontalAlignment": "Left",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Padding": "0,0,0,0",
                  "Top": 0,
                  "VerticalAlignment": "Top",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.Grid",
                  "children": Array [
                    Object {
                      "Background": "#00FFFFFF",
                      "BorderBrush": null,
                      "BorderThickness": "0,0,0,0",
                      "Clip": null,
                      "CornerRadius": "0,0,0,0",
                      "FlowDirection": "LeftToRight",
                      "HorizontalAlignment": "Stretch",
                      "Left": 0,
                      "Margin": "0,5,0,5",
                      "Name": "SwitchAreaGrid",
                      "Padding": "0,0,0,0",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "XamlType": "Windows.UI.Xaml.Controls.Grid",
                    },
                    Object {
                      "Background": null,
                      "BorderBrush": null,
                      "BorderThickness": "0,0,0,0",
                      "Clip": null,
                      "CornerRadius": "0,0,0,0",
                      "FlowDirection": "LeftToRight",
                      "Foreground": "#FF000000",
                      "HorizontalAlignment": "Left",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Name": "OffContentPresenter",
                      "Padding": "0,0,0,0",
                      "Top": 0,
                      "VerticalAlignment": "Center",
                      "Visibility": "Visible",
                      "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
                    },
                    Object {
                      "Background": null,
                      "BorderBrush": null,
                      "BorderThickness": "0,0,0,0",
                      "Clip": null,
                      "CornerRadius": "0,0,0,0",
                      "FlowDirection": "LeftToRight",
                      "Foreground": "#FF000000",
                      "HorizontalAlignment": "Left",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Name": "OnContentPresenter",
                      "Padding": "0,0,0,0",
                      "Top": 0,
                      "VerticalAlignment": "Center",
                      "Visibility": "Visible",
                      "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
                    },
                    Object {
                      "Clip": null,
                      "FlowDirection": "LeftToRight",
                      "Height": 20,
                      "HorizontalAlignment": "Stretch",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Name": "OuterBorder",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 40,
                      "XamlType": "Windows.UI.Xaml.Shapes.Rectangle",
                    },
                    Object {
                      "Clip": null,
                      "FlowDirection": "LeftToRight",
                      "Height": 20,
                      "HorizontalAlignment": "Stretch",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Name": "SwitchKnobBounds",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 40,
                      "XamlType": "Windows.UI.Xaml.Shapes.Rectangle",
                    },
                    Object {
                      "Background": null,
                      "BorderBrush": null,
                      "BorderThickness": "0,0,0,0",
                      "Clip": null,
                      "CornerRadius": "0,0,0,0",
                      "FlowDirection": "LeftToRight",
                      "Height": 20,
                      "HorizontalAlignment": "Left",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Name": "SwitchKnob",
                      "Padding": "0,0,0,0",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "Width": 20,
                      "XamlType": "Windows.UI.Xaml.Controls.Grid",
                      "children": Array [
                        Object {
                          "Clip": null,
                          "FlowDirection": "LeftToRight",
                          "Height": 10,
                          "HorizontalAlignment": "Stretch",
                          "Left": 0,
                          "Margin": "0,0,0,0",
                          "Name": "SwitchKnobOn",
                          "Top": 0,
                          "VerticalAlignment": "Stretch",
                          "Visibility": "Visible",
                          "Width": 10,
                          "XamlType": "Windows.UI.Xaml.Shapes.Ellipse",
                        },
                        Object {
                          "Clip": null,
                          "FlowDirection": "LeftToRight",
                          "Height": 10,
                          "HorizontalAlignment": "Stretch",
                          "Left": 0,
                          "Margin": "0,0,0,0",
                          "Name": "SwitchKnobOff",
                          "Top": 0,
                          "VerticalAlignment": "Stretch",
                          "Visibility": "Visible",
                          "Width": 10,
                          "XamlType": "Windows.UI.Xaml.Shapes.Ellipse",
                        },
                      ],
                    },
                    Object {
                      "Background": "#33000000",
                      "BorderBrush": "#00FFFFFF",
                      "BorderThickness": "1,1,1,1",
                      "Clip": null,
                      "CornerRadius": "0,0,0,0",
                      "FlowDirection": "LeftToRight",
                      "Foreground": "#FF000000",
                      "HorizontalAlignment": "Stretch",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Name": "SwitchThumb",
                      "Padding": "0,0,0,0",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "XamlType": "Windows.UI.Xaml.Controls.Primitives.Thumb",
                      "children": Array [
                        Object {
                          "Clip": null,
                          "FlowDirection": "LeftToRight",
                          "HorizontalAlignment": "Stretch",
                          "Left": 0,
                          "Margin": "0,0,0,0",
                          "Top": 0,
                          "VerticalAlignment": "Stretch",
                          "Visibility": "Visible",
                          "XamlType": "Windows.UI.Xaml.Shapes.Rectangle",
                        },
                      ],
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
    Object {
      "Background": null,
      "BorderBrush": "#00000000",
      "BorderThickness": "0,0,0,0",
      "Clip": null,
      "CornerRadius": "0,0,0,0",
      "FlowDirection": "LeftToRight",
      "Height": 40,
      "HorizontalAlignment": "Stretch",
      "Left": 0,
      "Margin": "0,0,0,0",
      "Top": 100,
      "VerticalAlignment": "Stretch",
      "Visibility": "Visible",
      "Width": 718,
      "XamlType": "Microsoft.ReactNative.ViewPanel",
      "children": Array [
        Object {
          "Background": "#66FFFFFF",
          "BorderBrush": "#FF808080",
          "BorderThickness": "1,1,1,1",
          "Clip": null,
          "CornerRadius": "0,0,0,0",
          "FlowDirection": "LeftToRight",
          "Foreground": "#FF000000",
          "Height": 40,
          "HorizontalAlignment": "Stretch",
          "Left": 0,
          "Margin": "0,0,0,0",
          "Padding": "10,6,6,5",
          "Text": "TextInput1...",
          "Top": 0,
          "VerticalAlignment": "Stretch",
          "Visibility": "Visible",
          "Width": 718,
          "XamlType": "Windows.UI.Xaml.Controls.TextBox",
          "children": Array [
            Object {
              "Background": null,
              "BorderBrush": null,
              "BorderThickness": "0,0,0,0",
              "Clip": null,
              "CornerRadius": "0,0,0,0",
              "FlowDirection": "LeftToRight",
              "HorizontalAlignment": "Stretch",
              "Left": 0,
              "Margin": "0,0,0,0",
              "Padding": "0,0,0,0",
              "Top": 0,
              "VerticalAlignment": "Stretch",
              "Visibility": "Visible",
              "XamlType": "Windows.UI.Xaml.Controls.Grid",
              "children": Array [
                Object {
                  "Background": "#66FFFFFF",
                  "BorderBrush": "#FF808080",
                  "BorderThickness": "1,1,1,1",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "HorizontalAlignment": "Stretch",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Name": "BorderElement",
                  "Padding": "0,0,0,0",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.Border",
                },
                Object {
                  "Background": "#00FFFFFF",
                  "BorderBrush": "#00FFFFFF",
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#FF000000",
                  "HorizontalAlignment": "Stretch",
                  "Left": 0,
                  "Margin": "1,1,1,1",
                  "Name": "ContentElement",
                  "Padding": "10,6,6,5",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.ScrollViewer",
                  "children": Array [
                    Object {
                      "Background": null,
                      "BorderBrush": "#00FFFFFF",
                      "BorderThickness": "0,0,0,0",
                      "Clip": null,
                      "CornerRadius": "0,0,0,0",
                      "FlowDirection": "LeftToRight",
                      "HorizontalAlignment": "Stretch",
                      "Left": 0,
                      "Margin": "0,0,0,0",
                      "Name": "Root",
                      "Padding": "0,0,0,0",
                      "Top": 0,
                      "VerticalAlignment": "Stretch",
                      "Visibility": "Visible",
                      "XamlType": "Windows.UI.Xaml.Controls.Border",
                      "children": Array [
                        Object {
                          "Background": "#00FFFFFF",
                          "BorderBrush": null,
                          "BorderThickness": "0,0,0,0",
                          "Clip": null,
                          "CornerRadius": "0,0,0,0",
                          "FlowDirection": "LeftToRight",
                          "HorizontalAlignment": "Stretch",
                          "Left": 0,
                          "Margin": "0,0,0,0",
                          "Padding": "0,0,0,0",
                          "Top": 0,
                          "VerticalAlignment": "Stretch",
                          "Visibility": "Visible",
                          "XamlType": "Windows.UI.Xaml.Controls.Grid",
                          "children": Array [
                            Object {
                              "Background": null,
                              "BorderBrush": null,
                              "BorderThickness": "0,0,0,0",
                              "Clip": "Windows.UI.Xaml.Media.RectangleGeometry",
                              "CornerRadius": "0,0,0,0",
                              "FlowDirection": "LeftToRight",
                              "Foreground": "#FF000000",
                              "HorizontalAlignment": "Stretch",
                              "Left": 0,
                              "Margin": "10,6,6,5",
                              "Name": "ScrollContentPresenter",
                              "Padding": "0,0,0,0",
                              "Top": 0,
                              "VerticalAlignment": "Stretch",
                              "Visibility": "Visible",
                              "XamlType": "Windows.UI.Xaml.Controls.ScrollContentPresenter",
                              "children": Array [
                                Object {
                                  "Clip": null,
                                  "FlowDirection": "LeftToRight",
                                  "HorizontalAlignment": "Stretch",
                                  "Left": 0,
                                  "Margin": "0,0,0,0",
                                  "Top": 0,
                                  "VerticalAlignment": "Stretch",
                                  "Visibility": "Visible",
                                  "XamlType": "Windows.UI.Xaml.FrameworkElement",
                                },
                              ],
                            },
                            Object {
                              "Background": null,
                              "BorderBrush": null,
                              "BorderThickness": "0,0,0,0",
                              "Clip": null,
                              "CornerRadius": "0,0,0,0",
                              "FlowDirection": "LeftToRight",
                              "HorizontalAlignment": "Stretch",
                              "Left": 0,
                              "Margin": "0,0,0,0",
                              "Padding": "0,0,0,0",
                              "Top": 0,
                              "VerticalAlignment": "Stretch",
                              "Visibility": "Visible",
                              "XamlType": "Windows.UI.Xaml.Controls.Grid",
                            },
                          ],
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Background": null,
                  "BorderBrush": null,
                  "BorderThickness": "0,0,0,0",
                  "Clip": null,
                  "CornerRadius": "0,0,0,0",
                  "FlowDirection": "LeftToRight",
                  "Foreground": "#99000000",
                  "HorizontalAlignment": "Stretch",
                  "Left": 0,
                  "Margin": "0,0,0,0",
                  "Name": "DescriptionPresenter",
                  "Padding": "0,0,0,0",
                  "Top": 0,
                  "VerticalAlignment": "Stretch",
                  "Visibility": "Visible",
                  "XamlType": "Windows.UI.Xaml.Controls.ContentPresenter",
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;
